welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {


var T:array[boolean];








	
}
